// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers combineContainers should return a combined container 1`] = `
Object {
  "init": Object {
    "bar": true,
    "foo": false,
  },
  "options": Object {
    "bar": true,
    "foo": false,
  },
  "url": "foo/bar",
}
`;

exports[`Helpers loadPayload should return container when data is nil 1`] = `
Object {
  "init": Object {
    "foo": true,
  },
  "options": Object {
    "payloadAs": [MockFunction],
  },
}
`;

exports[`Helpers loadPayload should return container when data is nil 2`] = `
Object {
  "init": Object {
    "foo": true,
  },
  "options": Object {
    "payloadAs": [MockFunction],
  },
}
`;
